--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -12,7 +12,7 @@
     <div class=f_bot>
         <div class="center">
             <div class="left">
-                <img src="/img/f_logo.jpg" alt="">
+                <img class="f_logo" src="/img/logo2.png" alt="">
             </div>
             <div class="right">
                 <div class="dummy_wrap">
