--- a/html/css/style.css
+++ b/html/css/style.css
@@ -88,11 +88,16 @@ body {
 }
 #header .h_bot .logo {
   width: 160px;
-  height: 30px;
+  height: 65px;
 }
 #header .h_bot .logo a img {
-  width: 100%;
+  width: 40%;
   height: 100%;
+}
+#header .h_bot .logo a span {
+  font-size: 25px;
+  color: #000000;
+  margin-left: -3px;
 }
 #header .h_bot .gnb {
   display: flex;
@@ -404,55 +409,154 @@ body {
   color: #fff;
   cursor: pointer;
 }
-#container .insert_wrap {
+#container .insert_wrap, #container .update_wrap {
   display: flex;
   justify-content: center;
 }
-#container .insert_wrap .center {
+#container .insert_wrap .center, #container .update_wrap .center {
   width: 57%;
   background-color: #ff8119;
 }
-#container .insert_wrap .center #insert_form .insert_top {
+#container .insert_wrap .center > h3, #container .update_wrap .center > h3 {
+  font-size: 30px;
+  text-align: center;
+  margin: 55px 0 50px;
+}
+#container .insert_wrap .center #insert_form .insert_top, #container .insert_wrap .center #insert_form .update_top, #container .insert_wrap .center #update_form .insert_top, #container .insert_wrap .center #update_form .update_top, #container .update_wrap .center #insert_form .insert_top, #container .update_wrap .center #insert_form .update_top, #container .update_wrap .center #update_form .insert_top, #container .update_wrap .center #update_form .update_top {
   display: flex;
   justify-content: space-between;
 }
-#container .insert_wrap .center #insert_form .insert_top > div {
+#container .insert_wrap .center #insert_form .insert_top > div, #container .insert_wrap .center #insert_form .update_top > div, #container .insert_wrap .center #update_form .insert_top > div, #container .insert_wrap .center #update_form .update_top > div, #container .update_wrap .center #insert_form .insert_top > div, #container .update_wrap .center #insert_form .update_top > div, #container .update_wrap .center #update_form .insert_top > div, #container .update_wrap .center #update_form .update_top > div {
   display: flex;
   padding: 10px 0;
   box-sizing: border-box;
   align-items: center;
 }
-#container .insert_wrap .center #insert_form .insert_top > div > div {
+#container .insert_wrap .center #insert_form .insert_top > div > div, #container .insert_wrap .center #insert_form .update_top > div > div, #container .insert_wrap .center #update_form .insert_top > div > div, #container .insert_wrap .center #update_form .update_top > div > div, #container .update_wrap .center #insert_form .insert_top > div > div, #container .update_wrap .center #insert_form .update_top > div > div, #container .update_wrap .center #update_form .insert_top > div > div, #container .update_wrap .center #update_form .update_top > div > div {
   text-align: center;
 }
-#container .insert_wrap .center #insert_form .insert_top .title_box {
+#container .insert_wrap .center #insert_form .insert_top .title_box, #container .insert_wrap .center #insert_form .update_top .title_box, #container .insert_wrap .center #update_form .insert_top .title_box, #container .insert_wrap .center #update_form .update_top .title_box, #container .update_wrap .center #insert_form .insert_top .title_box, #container .update_wrap .center #insert_form .update_top .title_box, #container .update_wrap .center #update_form .insert_top .title_box, #container .update_wrap .center #update_form .update_top .title_box {
   width: 80%;
 }
-#container .insert_wrap .center #insert_form .insert_top .title_box .title_text {
-  width: 10%;
+#container .insert_wrap .center #insert_form .insert_top .title_box .title_text, #container .insert_wrap .center #insert_form .update_top .title_box .title_text, #container .insert_wrap .center #update_form .insert_top .title_box .title_text, #container .insert_wrap .center #update_form .update_top .title_box .title_text, #container .update_wrap .center #insert_form .insert_top .title_box .title_text, #container .update_wrap .center #insert_form .update_top .title_box .title_text, #container .update_wrap .center #update_form .insert_top .title_box .title_text, #container .update_wrap .center #update_form .update_top .title_box .title_text {
+  font-size: 20px;
+  text-align: center;
+  margin: 0 20px;
 }
-#container .insert_wrap .center #insert_form .insert_top .title_box input {
+#container .insert_wrap .center #insert_form .insert_top .title_box input, #container .insert_wrap .center #insert_form .update_top .title_box input, #container .insert_wrap .center #update_form .insert_top .title_box input, #container .insert_wrap .center #update_form .update_top .title_box input, #container .update_wrap .center #insert_form .insert_top .title_box input, #container .update_wrap .center #insert_form .update_top .title_box input, #container .update_wrap .center #update_form .insert_top .title_box input, #container .update_wrap .center #update_form .update_top .title_box input {
   height: 40px;
   width: 70%;
   padding-left: 12px;
   border-radius: 5px;
   border: 1px solid #000;
 }
-#container .insert_wrap .center #insert_form .insert_top .name_box .name {
-  margin-left: 10px;
+#container .insert_wrap .center #insert_form .insert_top .name_box, #container .insert_wrap .center #insert_form .update_top .name_box, #container .insert_wrap .center #update_form .insert_top .name_box, #container .insert_wrap .center #update_form .update_top .name_box, #container .update_wrap .center #insert_form .insert_top .name_box, #container .update_wrap .center #insert_form .update_top .name_box, #container .update_wrap .center #update_form .insert_top .name_box, #container .update_wrap .center #update_form .update_top .name_box {
+  width: 20%;
+}
+#container .insert_wrap .center #insert_form .insert_top .name_box .name_text, #container .insert_wrap .center #insert_form .update_top .name_box .name_text, #container .insert_wrap .center #update_form .insert_top .name_box .name_text, #container .insert_wrap .center #update_form .update_top .name_box .name_text, #container .update_wrap .center #insert_form .insert_top .name_box .name_text, #container .update_wrap .center #insert_form .update_top .name_box .name_text, #container .update_wrap .center #update_form .insert_top .name_box .name_text, #container .update_wrap .center #update_form .update_top .name_box .name_text {
+  width: 28%;
+  font-size: 15px;
+}
+#container .insert_wrap .center #insert_form .insert_top .name_box .name, #container .insert_wrap .center #insert_form .update_top .name_box .name, #container .insert_wrap .center #update_form .insert_top .name_box .name, #container .insert_wrap .center #update_form .update_top .name_box .name, #container .update_wrap .center #insert_form .insert_top .name_box .name, #container .update_wrap .center #insert_form .update_top .name_box .name, #container .update_wrap .center #update_form .insert_top .name_box .name, #container .update_wrap .center #update_form .update_top .name_box .name {
+  width: 60%;
   background-color: #949494;
   color: #353535;
   padding: 10px 12px;
   border-radius: 5px;
   border: 1px solid #585858;
+  margin-right: 20px;
+  box-sizing: border-box;
 }
-#container .insert_wrap .center #insert_form .file_wrap {
+#container .insert_wrap .center #insert_form .file_wrap, #container .insert_wrap .center #update_form .file_wrap, #container .update_wrap .center #insert_form .file_wrap, #container .update_wrap .center #update_form .file_wrap {
   display: flex;
+  align-items: center;
+  line-height: 35px;
+  padding: 0 20px;
 }
-#container .insert_wrap .center #insert_form .context {
+#container .insert_wrap .center #insert_form .file_wrap .file_text, #container .insert_wrap .center #update_form .file_wrap .file_text, #container .update_wrap .center #insert_form .file_wrap .file_text, #container .update_wrap .center #update_form .file_wrap .file_text {
+  margin-right: 12px;
+}
+#container .insert_wrap .center #insert_form .bar, #container .insert_wrap .center #update_form .bar, #container .update_wrap .center #insert_form .bar, #container .update_wrap .center #update_form .bar {
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  border-radius: 10px;
+  margin: 10px 0 20px;
+}
+#container .insert_wrap .center #insert_form .context_wrap, #container .insert_wrap .center #update_form .context_wrap, #container .update_wrap .center #insert_form .context_wrap, #container .update_wrap .center #update_form .context_wrap {
+  padding: 0 20px;
+}
+#container .insert_wrap .center #insert_form .context_wrap .context, #container .insert_wrap .center #update_form .context_wrap .context, #container .update_wrap .center #insert_form .context_wrap .context, #container .update_wrap .center #update_form .context_wrap .context {
   padding: 12px;
   border: 1px solid #000;
+  height: 550px;
   border-radius: 5px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+#container .insert_wrap .center #insert_form .btn_wrap, #container .insert_wrap .center #update_form .btn_wrap, #container .update_wrap .center #insert_form .btn_wrap, #container .update_wrap .center #update_form .btn_wrap {
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px 20px;
+}
+#container .insert_wrap .center #insert_form .btn_wrap #sub_btn, #container .insert_wrap .center #insert_form .btn_wrap #upt_btn, #container .insert_wrap .center #update_form .btn_wrap #sub_btn, #container .insert_wrap .center #update_form .btn_wrap #upt_btn, #container .update_wrap .center #insert_form .btn_wrap #sub_btn, #container .update_wrap .center #insert_form .btn_wrap #upt_btn, #container .update_wrap .center #update_form .btn_wrap #sub_btn, #container .update_wrap .center #update_form .btn_wrap #upt_btn {
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  border: none;
+  background-color: #27aa78;
+  color: #ffffff;
+  cursor: pointer;
+}
+#container .where {
+  display: flex;
+  justify-content: center;
+}
+#container .where .center {
+  width: 57%;
+  background-color: #dbdbdb;
+}
+#container .where .center .title {
+  text-align: center;
+  margin: 30px 0;
+}
+#container .where .center .popular_local .subtitle {
+  text-align: center;
+}
+#container .where .center .popular_local .local_list_wrap {
+  background-color: pink;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0 20px;
+}
+#container .where .center .popular_local .local_list_wrap .local_list {
+  width: 24%;
+  margin: 0 1%;
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px;
+}
+#container .where .center .popular_local .local_list_wrap .local_list .local_bg {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s;
+}
+#container .where .center .popular_local .local_list_wrap .local_list .local_bg:hover {
+  transform: scale(1.3);
+}
+#container .where .center .popular_local .local_list_wrap .local_list .text_box {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  border-radius: 10px;
+  padding: 7px;
+  font-size: 15px;
 }
 
 #login {
@@ -634,9 +738,10 @@ body {
   width: 10%;
   margin-right: 40px;
 }
-#footer .f_bot .center .left img {
+#footer .f_bot .center .left .f_logo {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
 }
 #footer .f_bot .center .right {
   font-size: 12px;
