--- a/views/travel_insert.ejs
+++ b/views/travel_insert.ejs
@@ -13,6 +13,7 @@
     <div id="container">
         <div class="insert_wrap">
             <div class="center">
+                <h3>여행 작성 후기</h3>
                 <form id="insert_form" action="/insertAdd" method="post" enctype="multipart/form-data">
                     <!-- 로그인한 유저데이터 저장시키기 위한 히든태그 -->
                     <input type="hidden" class="user_brd_id" name="user_brd_id" value="<%- userData.member_id %>">
@@ -30,8 +31,13 @@
                         <p class="file_text">대표사진</p>
                         <input type="file" class="file" name="file" placeholder="thumbnail">
                     </div>
-                    <textarea class="context" name="context" placeholder="내용을 입력해주세요.."></textarea>
-                    <button type="submit">작성하기</button>
+                    <div class="bar"></div>
+                    <div class="context_wrap">
+                        <textarea class="context" name="context" placeholder="내용을 입력해주세요.."></textarea>
+                    </div>
+                    <div class="btn_wrap">
+                        <button id="sub_btn" type="submit">작성하기</button>
+                    </div>
                 </form>
             </div>
         </div>
