--- a/views/travel_update.ejs
+++ b/views/travel_update.ejs
@@ -11,18 +11,38 @@
 <body>
     <%- include("common/header.ejs"); %>
     <div id="container">
-        <div class="center">
-            <form id="update_form" action="/updateAdd" method="post" enctype="multipart/form-data">
-                <!-- 로그인한 유저데이터 저장시키기 위한 히든태그 -->
-                <input type="hidden" class="user_brd_id" name="user_brd_id" value="<%- userData.member_id %>">
-                <!-- 게시글 번호를 알기위한 히든태그 -->
-                <input type="hidden" class="brd_no" name="brd_no" value="<%- brdData.brd_no %>">
-                <p class="name"><%- userData.member_name %></p>
-                <input type="text" class="title" name="title" placeholder="title" value="<%- brdData.user_title %>">
-                <input type="file" class="file" name="file" placeholder="thumbnail" value="<%- brdData.user_file %>">
-                <textarea class="context" name="context"><%- brdData.user_context %></textarea>
-                <button type="submit">수정하기</button>
-            </form>
+        <div class="update_wrap">
+            <div class="center">
+                <h3>여행 작성 후기</h3>
+                <form id="update_form" action="/updateAdd" method="post" enctype="multipart/form-data">
+                    <!-- 로그인한 유저데이터 저장시키기 위한 히든태그 -->
+                    <input type="hidden" class="user_brd_id" name="user_brd_id" value="<%- userData.member_id %>">
+                    <!-- 게시글 번호를 알기위한 히든태그 -->
+                    <input type="hidden" class="brd_no" name="brd_no" value="<%- brdData.brd_no %>">
+                    
+                    <div class="update_top">
+                        <div class="title_box">
+                            <div class="title_text">제목</div>
+                            <input type="text" class="title" name="title" placeholder="title" value="<%- brdData.user_title %>">
+                        </div>
+                        <div class="name_box">
+                            <div class="name_text">작성자</div>
+                            <p class="name"><%- userData.member_name %></p>
+                        </div>
+                    </div>
+                    <div class="file_wrap">
+                        <p class="file_text">대표사진</p>
+                        <input type="file" class="file" name="file" placeholder="thumbnail" value="<%- brdData.user_file %>">
+                    </div>
+                    <div class="bar"></div>
+                    <div class="context_wrap">
+                        <textarea class="context" name="context"><%- brdData.user_context %></textarea>
+                    </div>
+                    <div class="btn_wrap">
+                        <button id="upt_btn" type="submit">수정하기</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <%- include("common/footer.ejs"); %>
