호텔페이지 두번째 영역 작업중

--- a/views/travel_hotel.ejs
+++ b/views/travel_hotel.ejs
@@ -18,50 +18,113 @@
                     <p class="subtitle">최근 인기많은 지역</p>
                     <div class="local_list_wrap">
                         <!-- 나중에 반복문으로 만들어보기 -->
-                        <div class="local_list">
-                            <img class="local_bg" src="/img/jeju.jpg" alt="">
-                            <div class="text_box">#제주</div>
-                        </div>
-                        <div class="local_list">
-                            <img class="local_bg" src="/img/busan.jpg" alt="">
-                            <div class="text_box">#부산</div>
-                        </div>
-                        <div class="local_list">
-                            <img class="local_bg" src="/img/seoul2.jpg" alt="">
-                            <div class="text_box">#서울</div>
-                        </div>
-                        <div class="local_list">
-                            <img class="local_bg" src="/img/chuncheon.jpg" alt="">
-                            <div class="text_box">#춘천</div>
-                        </div>
+                        <a href="#">
+                            <div class="local_list">
+                                <img class="local_bg" src="/img/jeju.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>제주</div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="local_list">
+                                <img class="local_bg" src="/img/busan.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>부산</div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="local_list">
+                                <img class="local_bg" src="/img/seoul2.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>서울</div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="local_list">
+                                <img class="local_bg" src="/img/chuncheon.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>춘천</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="theme_hotel">
                     <p class="subtitle">다양한 분위기의 숙소</p>
                     <div class="theme_list_wrap">
                         <!-- 나중에 반복문으로 만들어보기 -->
-                        <div class="theme_list">
-                            <div class="center">
-                                <img class="theme_bg" src="" alt="">
-                                <div class="text_box">#모던한</div>
+                        <a href="#">
+                            <div class="theme_list">
+                                <img class="theme_bg" src="/img/modern.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>모던한</div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="theme_list">
+                                <img class="theme_bg" src="/img/expensive.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>고급진</div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="theme_list">
+                                <img class="theme_bg" src="/img/cozy.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>아늑한</div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="theme_list">
+                                <img class="theme_bg" src="/img/colorful.jpg" alt="">
+                                <div class="text_box"><span class="hash_tag">#</span>화려한</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="btn_wrap">
+                    <a class="hotel_more" href="#">더 다양한 지역과 숙소 둘러보기<i class="fa-solid fa-plus"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- 슬라이더 -->
+        <div class="good_hotel">
+            <div class="center">
+                <h2 class="title">호텔 리뷰</h2>
+                <div class="silde_wrap">
+                    <div class="silde_view">
+                        <div class="slide_box">
+                            <p class="review_title">이것은 타이틀 제목입니다1</p>
+                            <p class="context">
+                                첫번째 문단입니다. <br>
+                                두번째 문단입니다.
+                            </p>
+                            <div class="person">
+                                <div class="person_img"><!--<img src="/img/person1.jpg" alt="">--></div>
+                                <div class="name_hotel">
+                                    <p class="hotel">숙박했던 호텔</p>
+                                    <p class="name">사용자 이름</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="theme_list">
-                            <div class="center">
-                                <img class="theme_bg" src="" alt="">
-                                <div class="text_box">#고급진</div>
+                        <div class="slide_box">
+                            <p class="review_title">이것은 타이틀 제목입니다2</p>
+                            <p class="context">
+                                첫번째 문단입니다. <br>
+                                두번째 문단입니다.
+                            </p>
+                            <div class="person">
+                                <div class="person_img"><!--<img src="/img/person1.jpg" alt="">--></div>
+                                <div class="name_hotel">
+                                    <p class="hotel">숙박했던 호텔</p>
+                                    <p class="name">사용자 이름</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="theme_list">
-                            <div class="center">
-                                <img class="theme_bg" src="" alt="">
-                                <div class="text_box">#아늑한</div>
-                            </div>
-                        </div>
-                        <div class="theme_list">
-                            <div class="center">
-                                <img class="theme_bg" src="" alt="">
-                                <div class="text_box">#화려한</div>
+                        <div class="slide_box">
+                            <p class="review_title">이것은 타이틀 제목입니다3</p>
+                            <p class="context">
+                                첫번째 문단입니다. <br>
+                                두번째 문단입니다.
+                            </p>
+                            <div class="person">
+                                <div class="person_img"><!--<img src="/img/person1.jpg" alt="">--></div>
+                                <div class="name_hotel">
+                                    <p class="hotel">숙박했던 호텔</p>
+                                    <p class="name">사용자 이름</p>
+                                </div>
                             </div>
                         </div>
                     </div>
