--- a/html/css/style.css
+++ b/html/css/style.css
@@ -521,10 +521,10 @@ body {
   text-align: center;
   margin: 30px 0;
 }
-#container .where .center .popular_local .subtitle {
+#container .where .center .popular_local .subtitle, #container .where .center .theme_hotel .subtitle {
   text-align: center;
 }
-#container .where .center .popular_local .local_list_wrap {
+#container .where .center .popular_local .local_list_wrap, #container .where .center .popular_local .theme_list_wrap, #container .where .center .theme_hotel .local_list_wrap, #container .where .center .theme_hotel .theme_list_wrap {
   background-color: pink;
   width: 100%;
   display: flex;
@@ -532,23 +532,25 @@ body {
   align-items: center;
   margin: 15px 0 20px;
 }
-#container .where .center .popular_local .local_list_wrap .local_list {
+#container .where .center .popular_local .local_list_wrap > a, #container .where .center .popular_local .theme_list_wrap > a, #container .where .center .theme_hotel .local_list_wrap > a, #container .where .center .theme_hotel .theme_list_wrap > a {
   width: 24%;
+}
+#container .where .center .popular_local .local_list_wrap > a .local_list, #container .where .center .popular_local .local_list_wrap > a .theme_list, #container .where .center .popular_local .theme_list_wrap > a .local_list, #container .where .center .popular_local .theme_list_wrap > a .theme_list, #container .where .center .theme_hotel .local_list_wrap > a .local_list, #container .where .center .theme_hotel .local_list_wrap > a .theme_list, #container .where .center .theme_hotel .theme_list_wrap > a .local_list, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list {
   margin: 0 1%;
   height: 200px;
   overflow: hidden;
   position: relative;
   border-radius: 10px;
 }
-#container .where .center .popular_local .local_list_wrap .local_list .local_bg {
+#container .where .center .popular_local .local_list_wrap > a .local_list .local_bg, #container .where .center .popular_local .local_list_wrap > a .local_list .theme_bg, #container .where .center .popular_local .local_list_wrap > a .theme_list .local_bg, #container .where .center .popular_local .local_list_wrap > a .theme_list .theme_bg, #container .where .center .popular_local .theme_list_wrap > a .local_list .local_bg, #container .where .center .popular_local .theme_list_wrap > a .local_list .theme_bg, #container .where .center .popular_local .theme_list_wrap > a .theme_list .local_bg, #container .where .center .popular_local .theme_list_wrap > a .theme_list .theme_bg, #container .where .center .theme_hotel .local_list_wrap > a .local_list .local_bg, #container .where .center .theme_hotel .local_list_wrap > a .local_list .theme_bg, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .local_bg, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .theme_bg, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .local_bg, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .theme_bg, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .local_bg, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .theme_bg {
   width: 100%;
   height: 100%;
   transition: all 0.5s;
 }
-#container .where .center .popular_local .local_list_wrap .local_list .local_bg:hover {
+#container .where .center .popular_local .local_list_wrap > a .local_list .local_bg:hover, #container .where .center .popular_local .local_list_wrap > a .local_list .theme_bg:hover, #container .where .center .popular_local .local_list_wrap > a .theme_list .local_bg:hover, #container .where .center .popular_local .local_list_wrap > a .theme_list .theme_bg:hover, #container .where .center .popular_local .theme_list_wrap > a .local_list .local_bg:hover, #container .where .center .popular_local .theme_list_wrap > a .local_list .theme_bg:hover, #container .where .center .popular_local .theme_list_wrap > a .theme_list .local_bg:hover, #container .where .center .popular_local .theme_list_wrap > a .theme_list .theme_bg:hover, #container .where .center .theme_hotel .local_list_wrap > a .local_list .local_bg:hover, #container .where .center .theme_hotel .local_list_wrap > a .local_list .theme_bg:hover, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .local_bg:hover, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .theme_bg:hover, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .local_bg:hover, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .theme_bg:hover, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .local_bg:hover, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .theme_bg:hover {
   transform: scale(1.3);
 }
-#container .where .center .popular_local .local_list_wrap .local_list .text_box {
+#container .where .center .popular_local .local_list_wrap > a .local_list .text_box, #container .where .center .popular_local .local_list_wrap > a .theme_list .text_box, #container .where .center .popular_local .theme_list_wrap > a .local_list .text_box, #container .where .center .popular_local .theme_list_wrap > a .theme_list .text_box, #container .where .center .theme_hotel .local_list_wrap > a .local_list .text_box, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .text_box, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .text_box, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .text_box {
   position: absolute;
   left: 10px;
   top: 10px;
@@ -558,7 +560,39 @@ body {
   padding: 7px;
   font-size: 15px;
 }
-
+#container .where .center .popular_local .local_list_wrap > a .local_list .text_box .hash_tag, #container .where .center .popular_local .local_list_wrap > a .theme_list .text_box .hash_tag, #container .where .center .popular_local .theme_list_wrap > a .local_list .text_box .hash_tag, #container .where .center .popular_local .theme_list_wrap > a .theme_list .text_box .hash_tag, #container .where .center .theme_hotel .local_list_wrap > a .local_list .text_box .hash_tag, #container .where .center .theme_hotel .local_list_wrap > a .theme_list .text_box .hash_tag, #container .where .center .theme_hotel .theme_list_wrap > a .local_list .text_box .hash_tag, #container .where .center .theme_hotel .theme_list_wrap > a .theme_list .text_box .hash_tag {
+  margin-right: 2px;
+}
+#container .where .center .btn_wrap {
+  display: flex;
+  justify-content: center;
+}
+#container .where .center .btn_wrap .hotel_more {
+  background-color: skyblue;
+  display: block;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #000000;
+  font-size: 14px;
+}
+#container .where .center .btn_wrap .hotel_more i {
+  margin-left: 7px;
+}
+#container .good_hotel {
+  width: 100%;
+}
+#container .good_hotel .center {
+  background-color: skyblue;
+}
+#container .good_hotel .center .title {
+  text-align: center;
+  margin: 10px 0;
+}
+#container .good_hotel .center .silde_wrap .silde_view {
+  width: 100%;
+  display: flex;
+  background-color: #27aa78;
+}
 #login {
   height: 100vh;
   display: flex;
