--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -386,6 +386,7 @@
         }
     }
     // 호텔(서브페이지)
+    // 호텔페이지 첫번째 영역
     .where {
         display: flex; justify-content: center;
         .center {
@@ -393,34 +394,70 @@
             .title {
                 text-align: center; margin: 30px 0;
             }
-            .popular_local {
+            .popular_local,.theme_hotel {
                 .subtitle {
                     text-align: center;
                 }
-                .local_list_wrap {
+                .local_list_wrap,.theme_list_wrap {
                     background-color: pink;
                     width: 100%;
                     display: flex; justify-content: space-between;
                     align-items: center;
                     margin: 15px 0 20px;
-                    .local_list {
-                        width: 24%; margin: 0 1%; height: 200px;
-                        overflow: hidden; position: relative;
-                        border-radius: 10px;
-                        .local_bg {
-                            width: 100%; height: 100%;
-                            transition: all 0.5s;
-                            &:hover {
-                                transform: scale(1.3);
+                    > a {
+                        width: 24%;
+                        .local_list,.theme_list {
+                            margin: 0 1%; height: 200px;
+                            overflow: hidden; position: relative;
+                            border-radius: 10px;
+                            .local_bg,.theme_bg {
+                                width: 100%; height: 100%;
+                                transition: all 0.5s;
+                                &:hover {
+                                    transform: scale(1.3);
+                                }
+                            }
+                            .text_box {
+                                position: absolute; left: 10px; top: 10px;
+                                background-color: rgba(0,0,0,0.7);
+                                color: #fff;
+                                border-radius: 10px; padding: 7px;
+                                font-size: 15px;
+                                .hash_tag {
+                                    margin-right: 2px;
+                                }
                             }
                         }
-                        .text_box {
-                            position: absolute; left: 10px; top: 10px;
-                            background-color: rgba(0,0,0,0.7);
-                            color: #fff;
-                            border-radius: 10px; padding: 7px;
-                            font-size: 15px;
-                        }
+                    }
+                }
+            }
+            .btn_wrap {
+                display: flex; justify-content: center;
+                .hotel_more {
+                    background-color: skyblue;
+                    display: block; padding: 10px 20px;
+                    border-radius: 10px; color: #000000;
+                    font-size: 14px;
+                    i {margin-left: 7px;}
+                }
+            }
+        }
+    }
+    // 호텔페이지 두번째 영역
+    .good_hotel {
+        width: 100%;
+        .center {
+            background-color: skyblue;
+            .title {
+                text-align: center; margin: 10px 0;
+            }
+            .silde_wrap {
+
+                .silde_view {
+                    width: 100%;
+                    display: flex;
+                    background-color: #27aa78;
+                    .slide_box {
 
                     }
                 }
